--- a/views/home.ejs
+++ b/views/home.ejs
@@ -92,11 +92,20 @@
                     </div>
                 </div>
                 <div class="col-12 col-sm-6 col-md-4"></div>
-                <div class="d-flex p-3 col-12 col-md-4 col-md-offset-1 align-items-center d-flex position-sticky p-5">
-                    <a href="/newPassenger" class="btn btn-block btn-lg bg-dark text-white rounded-pill" id="Reg_for_pass">Register for Pass</a>
-                </div>
+                <!-- <div class="d-flex p-3 col-12 col-md-4 col-md-offset-1 align-items-center d-flex position-sticky p-5"> -->
+                    <!-- <a href="/newPassenger" class="btn btn-block btn-lg bg-dark text-white rounded-pill" id="Reg_for_pass">Register for Pass</a> -->
+                    <!-- <a href="#" class="rouded-pill">Fee details</a> -->
+                <!-- </div> -->
             </div>
             
+        </div>
+        <div class="row p-5">
+            <div class="col-md-6 col-12 p-2">
+                <a href="/newPassenger" class="btn btn-block btn-lg bg-dark text-white rounded-pill" id="Reg_for_pass">Register for Pass</a>
+            </div>
+            <div class="col-md-6 col-12 p-2">
+                <a href="/newPassenger" class="btn btn-outline-warning btn-lg btn-block rounded-pill" id="Reg_for_pass">Fee details</a>
+            </div>
         </div>
     </div>
     
