--- a/views/home.ejs
+++ b/views/home.ejs
@@ -104,7 +104,7 @@
                 <a href="/newPassenger" class="btn btn-block btn-lg bg-dark text-white rounded-pill" id="Reg_for_pass">Register for Pass</a>
             </div>
             <div class="col-md-6 col-12 p-2">
-                <a href="/newPassenger" class="btn btn-outline-warning btn-lg btn-block rounded-pill" id="Reg_for_pass">Fee details</a>
+                <a href="/fee" class="btn btn-outline-warning btn-lg btn-block rounded-pill" id="Reg_for_pass">Fee details</a>
             </div>
         </div>
     </div>
