--- a/views/newPassenger.ejs
+++ b/views/newPassenger.ejs
@@ -1,77 +1,140 @@
 <%- include("partials/header") %>
 
-    <style>
-        
-    </style>
-    <nav class="navbar navbar-dark navbar-expand-sm fixed-top">
-        <div class="container">
-            <a class="navbar-brand mr-auto h5" href="/" style="color: black;font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;"><i class="fa fa-bus" aria-hidden="true"></i>
-                College Bus</a>
-            <button class="navbar-toggler custom-toggler" type="button" data-toggle="collapse" data-target="#Navbar">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="Navbar">
-                <span class="navbar-nav ml-auto">
-                    <a role="button" href="/login" style="color: black;font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;" class="h5"><span class="fa fa-sign-out"></span>Login</a>
-                </span>
-            </div>
-        </div>
-    </nav>
-    <p class="h1 pt-5 text-dark font-weight-bold text-center" style="font-family: 'Courier New', Courier, monospace;"><marquee behavior="" direction="">BUS PASS REGISTRATION PORTAL</marquee></p>
-    <div style="width:80%;margin:auto;" class="  " >
-        <form style="background-color:#acffb0;" class="p-5 shadow-lg" method="POST" action="/checkout">
-            <div class="form-group">
-              <input type="text" class="form-control"  placeholder="Full Name" name="pass[name]" required>
-            </div>
-            <div class="form-group">
-              <input type="text" class="form-control"  placeholder="USN/ID" name="pass[id]" required>
-            </div>
-            <div class="form-group">
-                <input type="email" class="form-control"  placeholder="Email" name="pass[email]" required>
-            </div>
-            <div class="form-group">
-                <input type="text" class="form-control"  placeholder="Phone Number" name="pass[phno]" required>
-            </div>
-            <div class="form-group">
-                <!-- <input type="text" class="form-control"  placeholder="Boarding Point" required> -->
-                <label for="boardingpt">Select the boarding point:</label>
-                <select name="pass[boardingpt]" id="boardingpt" class="m-1" required>
-                    <% bt.forEach((bt)=>{ %>
-                        <option><%= bt.boardingpt%></option>
-                    <% }) %>
-                </select>
-            </div>
-           
-               
-            <div class="form-group">
-                <!-- <input type="text" class="form-control"  placeholder="Route Number" required> -->
-                <label for="routeno">Select the route number:</label>
-                <select name="pass[routeno]" id="routeno" class="m-1">
-                    <option value="null">Don't Know</option>
-                    <% routeno.forEach((routeno)=>{ %>
-                        <option><%= routeno.routeno%></option>
-                    <% }) %>
-                </select>
-            </div>
-            <div class="form-group">
-                <p>Select any One: </p> 
-                <label for="Student" class="pr-2"> Student</label>
-                <input type="radio" id="Student" name="pass[type]" value="Student" required >
-                <label for="Staff" class="pr-2 pl-2">Staff</label>
-                <input type="radio" id="Staff" name="pass[type]" value="Staff">
-            </div>
-            <div class="form-group">
-                <input type="submit" class="form-control btn  btn-lg rounded-pill bg-dark text-white">
-            </div>
-        </form>
-    
+<style></style>
+<nav class="navbar navbar-dark navbar-expand-sm fixed-top">
+  <div class="container">
+    <a
+      class="navbar-brand mr-auto h5"
+      href="/"
+      style="
+        color: black;
+        font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+      "
+      ><i class="fa fa-bus" aria-hidden="true"></i> College Bus</a
+    >
+    <button
+      class="navbar-toggler custom-toggler"
+      type="button"
+      data-toggle="collapse"
+      data-target="#Navbar"
+    >
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="Navbar">
+      <span class="navbar-nav ml-auto">
+        <a
+          role="button"
+          href="/login"
+          style="
+            color: black;
+            font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial,
+              sans-serif;
+          "
+          class="h5"
+          ><span class="fa fa-sign-out"></span>Login</a
+        >
+      </span>
     </div>
-    <div class="text-center p-5">
-        <a href="/" class="btn btn-lg rounded-pill btn-primary">Home <i class="fa fa-home" aria-hidden="true"></i></a>
-      </div>
+  </div>
+</nav>
+<p
+  class="h1 pt-5 text-dark font-weight-bold text-center"
+  style="font-family: 'Courier New', Courier, monospace"
+>
+  <marquee behavior="" direction="">BUS PASS REGISTRATION PORTAL</marquee>
+</p>
+<div style="width: 80%; margin: auto" class="">
+  <form
+    style="background-color: #acffb0"
+    class="p-5 shadow-lg"
+    method="POST"
+    action="/checkout"
+  >
+    <div class="form-group">
+      <input
+        type="text"
+        class="form-control"
+        placeholder="Full Name"
+        name="pass[name]"
+        required
+      />
+    </div>
+    <div class="form-group">
+      <input
+        type="text"
+        class="form-control"
+        placeholder="USN/ID"
+        name="pass[id]"
+        required
+      />
+    </div>
+    <div class="form-group">
+      <input
+        type="email"
+        class="form-control"
+        placeholder="Email"
+        name="pass[email]"
+        required
+      />
+    </div>
+    <div class="form-group">
+      <input
+        type="text"
+        class="form-control"
+        placeholder="Phone Number"
+        name="pass[phno]"
+        required
+      />
+    </div>
+    <div class="form-group">
+      <!-- <input type="text" class="form-control"  placeholder="Boarding Point" required> -->
+      <label for="boardingpt">Select the boarding point:</label>
+      <select name="pass[boardingpt]" id="boardingpt" class="m-1" required>
+        <% bt.forEach((bt)=>{ %>
+        <option><%= bt.boardingpt%></option>
+        <% }) %>
+      </select>
+    </div>
+
+    <div class="form-group">
+      <!-- <input type="text" class="form-control"  placeholder="Route Number" required> -->
+      <label for="routeno">Select the route number:</label>
+      <select name="pass[routeno]" id="routeno" class="m-1">
+        <option value="null">Don't Know</option>
+        <% routeno.forEach((routeno)=>{ %>
+        <option><%= routeno.routeno%></option>
+        <% }) %>
+      </select>
+    </div>
+    <div class="form-group">
+      <p>Select any One:</p>
+      <label for="Student" class="pr-2"> Student</label>
+      <input
+        type="radio"
+        id="Student"
+        name="pass[type]"
+        value="Student"
+        required
+      />
+      <label for="Staff" class="pr-2 pl-2">Staff</label>
+      <input type="radio" id="Staff" name="pass[type]" value="Staff" />
+    </div>
+    <div class="form-group">
+      <input
+        type="submit"
+        class="form-control btn btn-lg rounded-pill bg-dark text-white"
+      />
+    </div>
+  </form>
+</div>
+<div class="text-center p-5">
+  <a href="/" class="btn btn-lg rounded-pill btn-primary"
+    >Home <i class="fa fa-home" aria-hidden="true"></i
+  ></a>
+</div>
 <%- include("partials/footer") %>
 <script>
-    bt=document.getElementById("boardingpt")
-    //bt.style.color="red" 
-    //alert("Hello")
-</script> 
+  bt = document.getElementById("boardingpt");
+  //bt.style.color="red"
+  //alert("Hello")
+</script>
