--- a/views/login.ejs
+++ b/views/login.ejs
@@ -28,15 +28,24 @@
             font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial,
               sans-serif;
           "
-          class="h5"
-          ><span class="fa fa-sign-out"></span>Login</a
-        >
+          class="h5">
+          <span class="fa fa-sign-out"></span>Login
+        </a>
       </span>
     </div>
   </div>
 </nav>
-<div class="container pt-5">
-  <div style="margin: 25px auto; width: 90%" class="pt-5 w-50">
+<div class="pt-5 container">
+  <% if(message.error){ %>
+    <div class="alert alert-warning alert-dismissible " role="alert">
+        <span type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></span>
+        <strong ><p class="text-center"><%= message.error%></p></strong>
+      </div>
+  <% } %>
+</div>
+
+<div class="container ">
+  <div style="margin: 25px auto; width: 90%" class=" w-75">
     <form action="/login" method="POST" class="p-5 shadow-lg">
       <div class="row">
         <div class="col-md-6 col-sm-12 p-2">
@@ -49,7 +58,7 @@
           />
         </div>
         <div class="col-md-6 col-sm-12 p-2 mt-5">
-          <div class="form-group">
+          <div class="form-group p-2">
             <input
               type="text"
               name="username"
@@ -58,7 +67,7 @@
               required
             />
           </div>
-          <div class="form-group">
+          <div class="form-group p-2">
             <input
               type="password"
               name="password"
@@ -67,7 +76,7 @@
               required
             />
           </div>
-          <div class="form-group">
+          <div class="form-group p-2">
             <input
               type="submit"
               value="Login"
